--- a/index.html
+++ b/index.html
@@ -192,9 +192,42 @@ p {
     <div class="hangman">
   <div class="guess"></div>
   <form class="guessForm">
-  <input type="text" class="guessLetter" maxlength="1"  placeholder="Enter a letter . . . &#x23ce;"/> <button type="submit" class="guessButton">Guess</button>
+  <input type="text" class="guessLetter" maxlength="1"  placeholder="एक पत्र दर्ज. . . &#x23ce;"/> <button type="submit" class="guessButton">अनुमान</button>
   </form>  
-  <p>Hint: words are web related. </p>
+
+<form class="guessForm">
+  <table id="tbl" align="center" div="Table">
+  
+	<tr>
+		<td><button class = "guessButton" type="submit">च</button></td>
+		<td><button class = "guessButton" type="submit">प</button></td>
+		<td><button class = "guessButton" type="submit">फ</button></td>
+		<td><button class = "guessButton" type="submit">ब</button></td>
+		<td><button class = "guessButton" type="submit">ऻ</button></td>
+	</tr>
+	<tr>
+		<td><button class = "guessButton" type="submit">a</button></td>
+		<td><button class = "guessButton" type="submit">b</button></td>
+		<td><button class = "guessButton" type="submit">c</button></td>
+		<td><button class = "guessButton" type="submit">d</button></td>
+		<td><button class = "guessButton" type="submit">e</button></td>
+	</tr>
+	<tr>
+		<td><button class = "guessButton" type="submit">a</button></td>
+		<td><button class = "guessButton" type="submit">b</button></td>
+		<td><button class = "guessButton" type="submit">c</button></td>
+		<td><button class = "guessButton" type="submit">d</button></td>
+		<td><button class = "guessButton" type="submit">e</button></td>
+	</tr>
+	<tr>
+		<td><button class = "guessButton" type="submit">a</button></td>
+		<td><button class = "guessButton" type="submit">b</button></td>
+		<td><button class = "guessButton" type="submit">c</button></td>
+		<td><button class = "guessButton" type="submit">d</button></td>
+		<td><button class = "guessButton" type="submit">e</button></td>
+	</tr>
+	</table>
+	</form>
   <div class="wrong">
     <div class="wrongLetters"></div>
   </div>
@@ -208,7 +241,7 @@ p {
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
 
-        <script src="js/index.js"></script>
+        <script src="index.js"></script>
 
     
     
