some + changes + made +

--- a/index.html
+++ b/index.html
@@ -193,9 +193,7 @@ p {
   <div class="guess"></div>
   <form class="guessForm">
   <input type="text" class="guessLetter" maxlength="1"  placeholder="एक पत्र दर्ज. . . &#x23ce;"/> <button type="submit" class="guessButton">अनुमान</button>
-  </form>  
-
-<form class="guessForm">
+  
   <table id="tbl" align="center" div="Table">
   
 	<tr>
@@ -204,27 +202,40 @@ p {
 		<td><button class = "guessButton" type="submit">फ</button></td>
 		<td><button class = "guessButton" type="submit">ब</button></td>
 		<td><button class = "guessButton" type="submit">ऻ</button></td>
+		<td><button class = "guessButton" type="submit">य</button></td>
 	</tr>
 	<tr>
-		<td><button class = "guessButton" type="submit">a</button></td>
-		<td><button class = "guessButton" type="submit">b</button></td>
-		<td><button class = "guessButton" type="submit">c</button></td>
-		<td><button class = "guessButton" type="submit">d</button></td>
-		<td><button class = "guessButton" type="submit">e</button></td>
+		<td><button class = "guessButton" type="submit">ठ</button></td>
+		<td><button class = "guessButton" type="submit">र</button></td>
+		<td><button class = "guessButton" type="submit">ी</button></td>
+		<td><button class = "guessButton" type="submit">ऱ</button></td>
+		<td><button class = "guessButton" type="submit">ढ</button></td>
+		<td><button class = "guessButton" type="submit">भ</button></td>
 	</tr>
 	<tr>
-		<td><button class = "guessButton" type="submit">a</button></td>
-		<td><button class = "guessButton" type="submit">b</button></td>
-		<td><button class = "guessButton" type="submit">c</button></td>
-		<td><button class = "guessButton" type="submit">d</button></td>
-		<td><button class = "guessButton" type="submit">e</button></td>
+		<td><button class = "guessButton" type="submit">ल</button></td>
+		<td><button class = "guessButton" type="submit">ण</button></td>
+		<td><button class = "guessButton" type="submit">त</button></td>
+		<td><button class = "guessButton" type="submit">क</button></td>
+		<td><button class = "guessButton" type="submit">थ</button></td>
+		<td><button class = "guessButton" type="submit">म</button></td>
 	</tr>
 	<tr>
-		<td><button class = "guessButton" type="submit">a</button></td>
-		<td><button class = "guessButton" type="submit">b</button></td>
-		<td><button class = "guessButton" type="submit">c</button></td>
-		<td><button class = "guessButton" type="submit">d</button></td>
-		<td><button class = "guessButton" type="submit">e</button></td>
+		<td><button class = "guessButton" type="submit">व</button></td>
+		<td><button class = "guessButton" type="submit">ख</button></td>
+		<td><button class = "guessButton" type="submit">द</button></td>
+		<td><button class = "guessButton" type="submit">ग</button></td>
+		<td><button class = "guessButton" type="submit">श</button></td>
+		<td><button class = "guessButton" type="submit">ह</button></td>
+	</tr>
+
+	<tr>
+		<td><button class = "guessButton" type="submit">ग</button></td>
+		<td><button class = "guessButton" type="submit">ध</button></td>
+		<td><button class = "guessButton" type="submit">ष</button></td>
+		<td><button class = "guessButton" type="submit">घ</button></td>
+		<td><button class = "guessButton" type="submit">न</button></td>
+		<td><button class = "guessButton" type="submit">स</button></td>
 	</tr>
 	</table>
 	</form>
