trying + out + new + keypad

--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@ p {
   <div class="guess"></div>
   <form class="guessForm">
   <input type="text" class="guessLetter" maxlength="1"  placeholder="एक पत्र दर्ज. . . &#x23ce;"/> <button type="submit" class="guessButton">अनुमान</button>
-  
+
   <table id="tbl" align="center" div="Table">
   
 	<tr>
-		<td><button class = "guessButton" type="submit">च</button></td>
-		<td><button class = "guessButton" type="submit">प</button></td>
-		<td><button class = "guessButton" type="submit">फ</button></td>
-		<td><button class = "guessButton" type="submit">ब</button></td>
-		<td><button class = "guessButton" type="submit">ऻ</button></td>
-		<td><button class = "guessButton" type="submit">य</button></td>
+		<td><input type="button" class = "guessButton" type="submit" value="च" name="च"/></td>
+		<td><button class = "guessButton" type="submit" value="च">प</button></td>
+		<td><button class = "guessButton" type="submit" value="च">फ</button></td>
+		<td><button class = "guessButton" type="submit" value="च">ब</button></td>
+		<td><button class = "guessButton" type="submit" value="च">ऻ</button></td>
+		<td><button class = "guessButton" type="submit" value="च">य</button></td>
 	</tr>
 	<tr>
 		<td><button class = "guessButton" type="submit">ठ</button></td>
